--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "react-bootstrap": "^0.32.0",
+    "react-scripts": "0.8.5",
+    "redux-devtools": "^3.5.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2",
-    "redux": "^4.0.1"
+    "redux": "^3.7.2",
+    "react-redux": "^5.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
