--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-bootstrap": "^0.32.0",
     "react-scripts": "0.8.5",
-    "redux-devtools": "^3.5.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "redux-devtools": "^3.5.0"
   },
   "dependencies": {
+    "react-bootstrap": "^0.32.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "react-redux": "^5.0.7"
+    "yarn": "^1.15.2"
   },
   "scripts": {
     "start": "react-scripts start",
