--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "redux-devtools": "^3.5.0"
   },
   "dependencies": {
-    "react-bootstrap": "^0.32.0",
+    "axios": "^0.18.0",
+    "json-server": "^0.14.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.8.6",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.3.0",
     "yarn": "^1.15.2"
   },
   "scripts": {
