--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "react-scripts": "0.8.5",
-    "redux-devtools": "^3.5.0"
+    "react-test-renderer": "^16.8.6",
+    "redux-devtools": "^3.5.0",
+    "redux-mock-store": "^1.5.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -17,10 +21,14 @@
     "redux-thunk": "^2.3.0",
     "yarn": "^1.15.2"
   },
+  "peerDependencies": {
+    "react": "^16.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server":"json-server -p 3010 product.json"
   }
 }
