--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "react-scripts": "0.8.5",
-    "react-test-renderer": "^16.8.6",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "react-scripts": "^3.1.1",
+    "react-test-renderer": "^16.9.0",
     "redux-devtools": "^3.5.0",
     "redux-mock-store": "^1.5.3"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "json-server": "^0.14.2",
+    "axios": "^0.19.0",
+    "json-server": "^0.15.0",
     "react": "^16.9.0",
-    "react-bootstrap": "^0.32.0",
-    "react-dom": "^16.8.6",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
+    "react-bootstrap": "^1.0.0-beta.11",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "yarn": "^1.15.2"
   },
